force-app/main/default/objects/FIN_System_Log__c/fields/FIN_Error_Log__c.field-meta.xml
<CustomField>
    <fullName>FIN_Error_Log__c</fullName>
    <label>Error Log</label>
    <length>2048</length>
    <type>LongTextArea</type>
</CustomField>