force-app/main/default/objects/FIN_System_Log__c/fields/FIN_Error_Message__c.field-meta.xml
<CustomField>
    <fullName>FIN_Error_Message__c</fullName>
    <label>Error Message</label>
    <length>2048</length>
    <type>LongTextArea</type>
</CustomField>