force-app/main/default/objects/FIN_System_Log__c/fields/FIN_Error_Time__c.field-meta.xml
<CustomField>
    <fullName>FIN_Error_Time__c</fullName>
    <label>Error Time</label>
    <type>DateTime</type>
</CustomField>