force-app/main/default/objects/FIN_System_Log__c/fields/FIN_Process__c.field-meta.xml
<CustomField>
    <fullName>FIN_Process__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Process</label>
    <referenceTo>FIN_SystemDataLoadLog__c</referenceTo>
    <relationshipLabel>System Logs</relationshipLabel>
    <relationshipName>System_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>