force-app/main/default/objects/FIN_System_Log__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>FIN_Process__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>FIN_Error_Log__c</columns>
    <columns>FIN_Error_Message__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>